# dlthubarrow

./: .dockerignore  Dockerfile  README.md  azure.yaml  pyproject.toml
infra/: main.bicep  main.json
infra/modules/: acr.bicep  appinsights.bicep  container-app.bicep  keyvault.bicep
scripts/: bootstrap_snowflake.sh  bootstrap_snowflake.sql  create_pat.sql  run_smoke_test.sh
src/benchmark_runner/: __main__.py  api.py  pipeline.py  settings.py  telemetry.py
